// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Signout Page calls signOut when user is authenticated 1`] = `
<DocumentFragment>
  <p>
    Signing out
  </p>
</DocumentFragment>
`;

exports[`Signout Page does not call signOut when user is unauthenticated 1`] = `
<DocumentFragment>
  <p>
    Signed out
  </p>
</DocumentFragment>
`;
